--- a/paginadeinicio.html
+++ b/paginadeinicio.html
@@ -1211,19 +1211,19 @@
         <div class="ads-container">
             <div class="ads-wrapper" id="adsWrapper">
                 <div class="ad-slide active">
-                    <img src="adds/add1.png" alt="Anuncio 1">
+                    <img src="https://www.claro.com.pe/portal/pe/recursos_contenido/1768320040116-portabilidad-postpago-claro-dk.jpg" alt="Anuncio 1">
                 </div>
                 <div class="ad-slide">
-                    <img src="adds/add2.jpg" alt="Anuncio 2">
+                    <img src="https://www.claro.com.co/portal/co/recursos_contenido/1716824776972-web-Desktop.jpg" alt="Anuncio 2">
                 </div>
                 <div class="ad-slide">
-                    <img src="adds/add3.webp" alt="Anuncio 3">
+                    <img src="https://www.claro.com.pe/portal/pe/recursos_contenido/Banner_Titulo_desktop_Chip_Prepago.png" alt="Anuncio 3">
                 </div>
                 <div class="ad-slide">
-                    <img src="adds/add4.webp" alt="Anuncio 4">
+                    <img src="https://www.claro.com.pe/portal/pe/recursos_contenido/Banner-Movil-Alto2BFormulario-2880x936-Desktop-FullClaro-Mayo.jpg" alt="Anuncio 4">
                 </div>
                 <div class="ad-slide">
-                    <img src="adds/add5.webp" alt="Anuncio 5">
+                    <img src="https://hablandoclaro.claromarketingcloud.pe/storage/files/1074-x-407(228).jpg" alt="Anuncio 5">
                 </div>
             </div>
             
@@ -1713,4 +1713,5 @@
         cargarProductos();
     </script>
 </body>
+
 </html>
